[package]
name = "socks2http"
version = "0.3.1"
description = "Convert SOCKS5 proxy to HTTP proxy"
authors = ["fokx <github.com/fokx>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/fokx/socks2http"

[dependencies]
#openssl = { version = "0.10.49" }
#openssl2-sys = "1.0.0"
hyper = "*"
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["rustls-tls", "blocking", "socks"] }
log = "*"
env_logger ="*"
httparse = "*"
async-socks5 = "*"
#tokio-socks = "0.2.0"
#socks = "0.3.2"
futures = "*"
rand = "*"
clap = { version = "4.5.4", features = ["derive"] }
